# zh_duckling

./: README.md  duckling.cabal
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/: Api.dyn_hi  Api.hi  Debug.hi  Dimensions.dyn_hi  Dimensions.hi  Engine.dyn_hi  Locale.dyn_hi  Resolve.hi  Rules.dyn_hi  Rules.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/AmountOfMoney/: Rules.dyn_hi  Rules.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/CreditCardNumber/: Corpus.dyn_hi  Corpus.hi  Helpers.hi  Rules.hi  Types.dyn_hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Dimensions/: Common.dyn_hi  Common.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Distance/: Corpus.dyn_hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Duration/: Corpus.dyn_hi  Corpus.hi  Helpers.hi  Rules.dyn_hi  Rules.hi  Types.dyn_hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Email/: Corpus.dyn_hi  Corpus.hi  Rules.hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Engine/: Regex.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Gender/: Corpus.dyn_hi  Corpus.hi  Rules.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Identity/: Corpus.dyn_hi  Helpers.dyn_hi  Helpers.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Numeral/: Corpus.dyn_hi  Corpus.hi  Helpers.dyn_hi  Rules.dyn_hi  Types.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Ordinal/: Corpus.dyn_hi  Corpus.hi  Helpers.hi  Rules.dyn_hi  Rules.hi  Types.dyn_hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/PhoneNumber/: Corpus.dyn_hi  Corpus.hi  Rules.dyn_hi  Types.dyn_hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Quantity/: Corpus.dyn_hi  Corpus.hi  Rules.dyn_hi  Rules.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Ranking/: Extraction.hi  Rank.hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Regex/: Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Rules/: Common.dyn_hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Temperature/: Corpus.dyn_hi  Corpus.hi  Helpers.hi  Rules.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Testing/: Types.dyn_hi  Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Time/: Computed.dyn_hi  Helpers.hi  Types.dyn_hi  Types.hi  ZHCorpus.dyn_hi  ZHCorpus.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/TimeGrain/: Types.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Types/: Document.hi  Stash.hi
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/lib/x86_64-osx-ghc-8.0.2/duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1/Duckling/Url/: Corpus.dyn_hi  Helpers.dyn_hi  Helpers.hi  Rules.dyn_hi  (+1 more)
.stack-work/install/x86_64-osx/lts-9.10/8.0.2/pkgdb/: duckling-0.1.6.1-FuuoxNkK08bIA0dGJuhBV1.conf  package.cache
Duckling/: Dimensions.hs  Locale.hs  Rules.hs  Types.hs
Duckling/AmountOfMoney/: Corpus.hs  Rules.hs
Duckling/Dimensions/: Common.hs  Types.hs
Duckling/Distance/: Corpus.hs  Rules.hs
Duckling/Duration/: Corpus.hs
Duckling/Email/: Corpus.hs  Rules.hs
Duckling/Gender/: Corpus.hs  Rules.hs  Types.hs
Duckling/Identity/: Corpus.hs  Helpers.hs  Rules.hs  Types.hs
Duckling/Numeral/: Corpus.hs  Rules.hs
Duckling/Ordinal/: Corpus.hs  Rules.hs
Duckling/Quantity/: Corpus.hs  Rules.hs
Duckling/Ranking/: Classifiers.hs
Duckling/Rules/: Common.hs
Duckling/Temperature/: Corpus.hs  Rules.hs
Duckling/Testing/: Types.hs
Duckling/Time/: Rules.hs  ZHCorpus.hs
Duckling/Time/CN/: Corpus.hs  Rules.hs
Duckling/Time/HK/: Corpus.hs  Rules.hs
Duckling/Time/MO/: Corpus.hs  Rules.hs
Duckling/Time/TW/: Corpus.hs  Rules.hs
Duckling/Time/ZH/: Rules.hs
Duckling/TimeGrain/: Rules.hs
Duckling/Volume/: Corpus.hs  Rules.hs
Duckling/Weight/: Corpus.hs  Helpers.hs  Rules.hs  Types.hs
exe/: CustomDimensionExample.hs  DucklingExpensive.hs  DucklingRequestSample.hs  ExampleMain.hs
exe/Duckling/Ranking/: Generate.hs
tests/Duckling/AmountOfMoney/: Tests.hs
tests/Duckling/Api/: Tests.hs
tests/Duckling/Dimensions/: Tests.hs
tests/Duckling/Distance/: Tests.hs
tests/Duckling/Duration/: Tests.hs
tests/Duckling/Email/: Tests.hs
tests/Duckling/Gender/: Tests.hs
tests/Duckling/Identity/: Tests.hs
tests/Duckling/Numeral/: Tests.hs
tests/Duckling/Ordinal/: Tests.hs
tests/Duckling/PhoneNumber/: Tests.hs
tests/Duckling/Quantity/: Tests.hs
tests/Duckling/Temperature/: Tests.hs
tests/Duckling/Time/: Tests.hs
tests/Duckling/Weight/: Tests.hs
(+27 files in other folders)
