-- Copyright (c) 2016-present, Facebook, Inc.
-- All rights reserved.
--
-- This source code is licensed under the BSD-style license found in the
-- LICENSE file in the root directory of this source tree. An additional grant
-- of patent rights can be found in the PATENTS file in the same directory.


name:                duckling
version:             0.1.6.1
synopsis:            A Haskell library for parsing text into structured data.
description:
  Duckling is a library for parsing text into structured data.
homepage:            https://github.com/facebook/duckling#readme
bug-reports:         https://github.com/facebook/duckling/issues
license:             OtherLicense
license-files:       LICENSE,PATENTS
author:              Facebook, Inc.
maintainer:          duckling-team@fb.com
copyright:           Copyright (c) 2014-present, Facebook, Inc.
category:            Systems
build-type:          Simple
stability:           alpha
cabal-version:       >=1.10
tested-with:
  GHC==8.0.2,
  GHC==8.2.1

extra-source-files:    README.md
                     , PATENTS

library
  exposed-modules:     Duckling.Core
                     , Duckling.Debug
                     , Duckling.Testing.Types
  -- ------------------------------------------------------------------
  -- Core
                     , Duckling.Api
                     , Duckling.Engine
                     , Duckling.Engine.Regex
                     , Duckling.Locale
                     , Duckling.Region
                     , Duckling.Resolve
                     , Duckling.Types
                     , Duckling.Types.Document
                     , Duckling.Types.Stash

  -- ------------------------------------------------------------------
  -- Rules
                     , Duckling.Rules
                     , Duckling.Rules.Common

  -- ------------------------------------------------------------------
  -- Ranking
                     , Duckling.Ranking.Types
                     , Duckling.Ranking.Extraction
                     , Duckling.Ranking.Rank
                     , Duckling.Ranking.Classifiers
                     , Duckling.Ranking.Classifiers.ZH_CN
                     , Duckling.Ranking.Classifiers.ZH_HK
                     , Duckling.Ranking.Classifiers.ZH_MO
                     , Duckling.Ranking.Classifiers.ZH_TW
                     , Duckling.Ranking.Classifiers.ZH_XX

  -- ------------------------------------------------------------------
  -- Dimensions
                     , Duckling.Dimensions
                     , Duckling.Dimensions.Common
                     , Duckling.Dimensions.Types

                     -- AmountOfMoney
                     , Duckling.AmountOfMoney.Corpus
                     , Duckling.AmountOfMoney.Helpers
                     , Duckling.AmountOfMoney.Rules
                     , Duckling.AmountOfMoney.Types

                     -- Distance
                     , Duckling.Distance.Corpus
                     , Duckling.Distance.Helpers
                     , Duckling.Distance.Rules
                     , Duckling.Distance.Types

                     -- Weight
                     , Duckling.Weight.Corpus
                     , Duckling.Weight.Helpers
                     , Duckling.Weight.Rules
                     , Duckling.Weight.Types

                     -- Duration
                     , Duckling.Duration.Corpus
                     , Duckling.Duration.Helpers
                     , Duckling.Duration.Rules
                     , Duckling.Duration.Types

                     -- Email
                     , Duckling.Email.Corpus
                     , Duckling.Email.Rules
                     , Duckling.Email.Types

                     -- Numeral
                     , Duckling.Numeral.Corpus
                     , Duckling.Numeral.Helpers
                     , Duckling.Numeral.Rules
                     , Duckling.Numeral.Types

                     -- Ordinal
                     , Duckling.Ordinal.Corpus
                     , Duckling.Ordinal.Rules
                     , Duckling.Ordinal.Helpers
                     , Duckling.Ordinal.Types

                     -- PhoneNumber
                     , Duckling.PhoneNumber.Corpus
                     , Duckling.PhoneNumber.Rules
                     , Duckling.PhoneNumber.Types

                     -- Quantity
                     , Duckling.Quantity.Corpus
                     , Duckling.Quantity.Rules
                     , Duckling.Quantity.Helpers
                     , Duckling.Quantity.Types

                     -- Regex
                     , Duckling.Regex.Types

                     -- Temperature
                     , Duckling.Temperature.Corpus
                     , Duckling.Temperature.Helpers
                     , Duckling.Temperature.Rules
                     , Duckling.Temperature.Types

                     -- Time
                     , Duckling.Time.Corpus
                     , Duckling.Time.ZHCorpus
                     , Duckling.Time.Rules
                     , Duckling.Time.CN.Corpus
                     , Duckling.Time.CN.Rules
                     , Duckling.Time.HK.Corpus
                     , Duckling.Time.HK.Rules
                     , Duckling.Time.MO.Corpus
                     , Duckling.Time.MO.Rules
                     , Duckling.Time.TW.Corpus
                     , Duckling.Time.TW.Rules
                     , Duckling.Time.Computed
                     , Duckling.Time.Helpers
                     , Duckling.Time.Types
                     -- REMOVE ME
                     , Duckling.Time.TimeZone.Parse

                     -- TimeGrain
                     , Duckling.TimeGrain.Rules
                     , Duckling.TimeGrain.Types

                     -- Url
                     , Duckling.Url.Corpus
                     , Duckling.Url.Helpers
                     , Duckling.Url.Rules
                     , Duckling.Url.Types

                     -- Volume
                     , Duckling.Volume.Corpus
                     , Duckling.Volume.Helpers
                     , Duckling.Volume.Rules
                     , Duckling.Volume.Types

                     -- CreditCardNumber
                     , Duckling.CreditCardNumber.Corpus
                     , Duckling.CreditCardNumber.Helpers
                     , Duckling.CreditCardNumber.Rules
                     , Duckling.CreditCardNumber.Types

                     -- Indentity
                     , Duckling.Identity.Corpus
                     , Duckling.Identity.Helpers
                     , Duckling.Identity.Rules
                     , Duckling.Identity.Types

                     -- Gender
                     , Duckling.Gender.Corpus
                     , Duckling.Gender.Rules
                     , Duckling.Gender.Types

  build-depends:       base                  >= 4.8.2 && < 5.0
                     , array                 >= 0.5.1.1 && < 0.6
                     , attoparsec            >= 0.13.1.0 && < 0.14
                     , aeson                 >= 0.11.3.0 && < 1.5
                     , bytestring            >= 0.10.6.0 && < 0.11
                     , containers            >= 0.5.6.2 && < 0.6
                     , deepseq               >= 1.4.1.1 && < 1.5
                     , dependent-sum         >= 0.3.2.2 && < 0.5
                     , extra                 >= 1.4.10 && < 1.7
                     , hashable              >= 1.2.4.0 && < 1.3
                     , regex-base            >= 0.93.2 && < 0.94
                     , regex-pcre            >= 0.94.4 && < 0.95
                     , text                  >= 1.2.2.1 && < 1.3
                     , text-show             >= 2.1.2 && < 3.7
                     , time                  >= 1.5.0.1 && < 1.9
                     , timezone-series       >= 0.1.5.1 && < 0.2
                     , unordered-containers  >= 0.2.7.2 && < 0.3
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite duckling-test
  type:                exitcode-stdio-1.0
  main-is:             TestMain.hs
  hs-source-dirs:      tests
  build-depends:       duckling
                     , base
                     , aeson
                     , text
                     , time
                     , unordered-containers
                     , tasty                 >= 0.11.1 && < 0.12
                     , tasty-hunit           >= 0.9.2 && < 1.0
  other-modules:       Duckling.Tests
                     , Duckling.Testing.Asserts

                     , Duckling.Api.Tests
                     , Duckling.Engine.Tests

  -- ------------------------------------------------------------------
  -- Dimensions
                     , Duckling.Dimensions.Tests

                     -- AmountOfMoney
                     , Duckling.AmountOfMoney.Tests

                     -- Distance
                     , Duckling.Distance.Tests

                     -- Weight
                     , Duckling.Weight.Tests

                     -- Duration
                     , Duckling.Duration.Tests

                     -- Email
                     , Duckling.Email.Tests

                     -- Numeral
                     , Duckling.Numeral.Tests

                     -- Ordinal
                     , Duckling.Ordinal.Tests

                     -- PhoneNumber
                     , Duckling.PhoneNumber.Tests

                     -- Quantity
                     , Duckling.Quantity.Tests

                     -- Temperature
                     , Duckling.Temperature.Tests

                     -- Time
                     , Duckling.Time.Tests

                     -- Url
                     , Duckling.Url.Tests

                     -- CreditCardNumber
                     , Duckling.CreditCardNumber.Tests

                     -- Identity
                     , Duckling.Identity.Tests

                     -- Gender
                     , Duckling.Gender.Tests

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wincomplete-patterns
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable duckling-regen-exe
  main-is:             RegenMain.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wincomplete-patterns
  other-modules:       Duckling.Ranking.Train
                     , Duckling.Ranking.Generate
  build-depends:       duckling
                     , base
                     , haskell-src-exts      >= 1.18 && < 1.20
                     , text
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable duckling-example-exe
  main-is:             ExampleMain.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Duckling.Data.TimeZone
  build-depends:       duckling
                     , base
                     , aeson
                     , bytestring
                     , directory             >= 1.2.2.0 && < 1.4
                     , extra
                     , filepath              >= 1.4.0.0 && < 1.5
                     , snap-core             >= 1.0.2.0 && < 1.1
                     , snap-server           >= 1.0.1.1 && < 1.1
                     , text
                     , text-show
                     , time
                     , timezone-olson        >= 0.1.7 && < 0.2
                     , timezone-series
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable custom-dimension-example
  main-is:             CustomDimensionExample.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       duckling
                     , aeson
                     , base
                     , deepseq
                     , dependent-sum
                     , hashable
                     , text
                     , text-show
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable duckling-request-sample
  main-is:             DucklingRequestSample.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Duckling.Data.TimeZone
  build-depends:       duckling
                     , base
                     , dependent-sum
                     , directory             >= 1.2.2.0 && < 1.4
                     , extra
                     , filepath              >= 1.4.0.0 && < 1.5
                     , text
                     , time
                     , timezone-olson        >= 0.1.7 && < 0.2
                     , timezone-series
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable duckling-expensive
  main-is:             DucklingExpensive.hs
  hs-source-dirs:      exe
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Duckling.Data.TimeZone
  build-depends:       duckling
                     , base
                     , dependent-sum
                     , directory             >= 1.2.2.0 && < 1.4
                     , extra
                     , filepath              >= 1.4.0.0 && < 1.5
                     , text
                     , time
                     , timezone-olson        >= 0.1.7 && < 0.2
                     , timezone-series
                     , unordered-containers
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/facebook/duckling
